--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
   <section id="help">
     <ul>
-      <li><strong>Ctrl+Enter</strong> to create a new text chunk</li>
-      <li><strong>Alt+Up/Down Arrow</strong> to move a chunk up/down</li>
-      <li><strong>Ctrl+Up/Down Arrow</strong> to change focus to previous/next chunk</li>
-      <li><strong>Ctrl+Space</strong> to collapse/expand a node</li>
-      <li><strong>Ctrl+Shift+Left/Right Arrow</strong> to zoom in/out on a node</li>
-      <li><strong>Ctrl+Alt+Shift+Backspace</strong> deletes a node <em>and all of its children</em>. There is no undo!</li>
-      <li><strong>Tab</strong> indents, <strong>Shift+Tab</strong> dedents</li>
+      <li><strong>Add item</strong> &mdash; Ctrl+Enter</li>
+      <li><strong>Move item</strong> &mdash; Alt+Up/Down Arrow</li>
+      <li><strong>Move cursor</strong> &mdash; Ctrl+Up/Down Arrow</li>
+      <li><strong>Indent/dedent item</strong> &mdash; Tab / Shift+Tab</li>
+      <li><strong>Collapse/expand item</strong> &mdash; Ctrl+Space</li>
+      <li><strong>Zoom in/out</strong> &mdash; Ctrl+Shift+Left/Right Arrow</li>
+      <li><strong>Delete item</strong> &mdash; Ctrl+Alt+Shift+Backspace. Warning: There is no undo!</li>
     </ul>
     <span id="close_help">close help</span>
   </section>
